Fix pre & code block word-wrapping

--- a/css/screen.css
+++ b/css/screen.css
@@ -188,7 +188,8 @@ article {
     padding: 0 .2em;
 }
 
-pre code {
+pre,
+code {
     overflow-x: auto;
 }
 
